--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,12 @@
 # will have compiled files and executables
 debug/
 target/
+
+# system files
 .idea/
 *.sublime-project
+*.sublime-workspace
+.DS_Store
 
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
