--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,7 @@ categories = ["cryptography", "database", "gui"]
 [dependencies]
 floem = { git = "https://github.com/lapce/floem.git", rev = "4340303f62223dd76bc227a5dc3dfe73e3dd9dc2" }
 im = "15.1.0"
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.8.8"
 
 [dev-dependencies]
