--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,6 @@ floem = { git = "https://github.com/lapce/floem.git", rev = "2f3e93bd89cd667cf8a
 im = "15.1.0"
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.8.8"
+zeroize = "1.7.0"
 
 [dev-dependencies]
