--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ keywords = ["GUI", "macos", "linux", "windows", "vault", "passwords"]
 categories = ["cryptography", "database", "gui"]
 
 [dependencies]
+chrono = "0.4.31"
 floem = { git = "https://github.com/lapce/floem.git", rev = "7e78abb06eac12609d661728ce2fbb0064d5451d" }
 im = "15.1.0"
 serde = { version = "1.0", features = ["derive"] }
