--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,8 @@ floem = { git = "https://github.com/lapce/floem.git", rev = "7e78abb06eac12609d6
 im = "15.1.0"
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.8.8"
+base64 = "0.21.5"
+aes-gcm-siv = "0.11.1"
+argon2 = "0.5.2"
 
 [dev-dependencies]
