--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,7 @@ toml = "0.8.8"
 base64 = "0.21.5"
 aes-gcm-siv = "0.11.1"
 argon2 = "0.5.2"
+webbrowser = "0.8.12"
+url-escape = "0.1.1"
 
 [dev-dependencies]
