--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,11 @@ im = "15.1.0"
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.8.8"
 base64 = "0.21.5"
-aes-gcm-siv = "0.11.1"
-argon2 = "0.5.2"
+aes-gcm-siv = { version="0.11.1", features = ["std"] }
+argon2 = { version="0.5.2", features = ["std", "zeroize"] }
 webbrowser = "0.8.12"
 url-escape = "0.1.1"
+thiserror = "1.0.56"
+crypto-common = "0.1.6"
 
 [dev-dependencies]
