--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,13 +2,13 @@
 name = "vault"
 version = "1.0.0"
 edition = "2021"
-authors = ["Dominik Wilkowski <Hi@Dominik-Wilkowski.com>"]
+authors = ["Dominik Wilkowski <Hi@Dominik-Wilkowski.com>", "Joshua Padman <joshua@padman.id.au>"]
 license = "GPL-3.0-or-later"
 description = "A vault GUI for your air-gaped passwords"
 homepage = "https://github.com/dominikwilkowski/vault"
 repository = "https://github.com/dominikwilkowski/vault"
 documentation = "https://docs.rs/vault/"
-keywords = ["GUI", "macos", "linux", "windows", "vault", "passwords"]
+keywords = ["macos", "linux", "windows", "vault", "passwords"]
 categories = ["cryptography", "database", "gui"]
 
 [dependencies]
