--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,5 +25,6 @@ url-escape = "0.1.1"
 thiserror = "1.0.56"
 crypto-common = "0.1.6"
 anyhow = "1.0.75"
+parking_lot = { version = "0.12.1" , features = ["deadlock_detection", "hardware-lock-elision"]}
 
 [dev-dependencies]
