--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -13,3 +13,4 @@ tab_spaces = 2
 # format_code_in_doc_comments = true
 # imports_layout = "HorizontalVertical"
 # control_brace_style = "ClosingNextLine"
+# imports_granularity = "Crate"
