--- a/vault_config.toml
+++ b/vault_config.toml
@@ -34,7 +34,11 @@ preset_fields = [
 ]
 
 [general.window_settings]
-sidebar_width = 140.0
+sidebar_width = 448.0
+window_size = [
+    800.0,
+    600.0,
+]
 
 [db]
 encrypted = false
