--- a/vault_db.toml
+++ b/vault_db.toml
@@ -1017,7 +1017,7 @@ id = 1
 kind = \"SecretLine\"
 title = \"Username\"
 visible = true
-value = [[1702851212, \"ano85\"]]
+value = [[1702851212, \"ano85\"], [1708808491, \"super_secret_totally_secure_password!!1!\"]]
 
 [[contents.fields]]
 id = 2
@@ -1031,7 +1031,7 @@ id = 3
 kind = \"SecretLine\"
 title = \"Notes\"
 visible = true
-value = [[1702851212, \"My secret notes\"]]
+value = [[1702851212, \"My secret notes\"], [1708808517, \"Changed my mind with the notes\"], [1708808549, \"Different stuff\"], [1708808556, \"ok ok I know now\"], [1708808575, \"New value\"], [1708808589, \"Last value\"]]
 
 [[contents.fields]]
 id = 5
