--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ categories = ["cryptography", "database", "gui"]
 
 [dependencies]
 chrono = "0.4.31"
-floem = { git = "https://github.com/lapce/floem.git", rev = "341afd255f98ca431e4f615864daa4dbcc057501" }
+floem = { features = ["editor"], git = "https://github.com/lapce/floem.git", rev = "341afd255f98ca431e4f615864daa4dbcc057501" }
 im = "15.1.0"
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.8.8"
