--- a/vault_db.toml
+++ b/vault_db.toml
@@ -1159,4 +1159,31 @@ kind = \"TextLineSecret\"
 title = \"Last\"
 visible = true
 value = [[1702851212, \"Last notes\"], [1702851212, \"Really last notes\"]]
+
+[[contents.fields]]
+id = 17
+kind = \"MultiLineSecret\"
+title = \"Secret Notes\"
+visible = true
+value = [[0, \"\"\"
+There are some secret notes in there
+with multiple lines.
+More lines than we have in the other notes
+
+Also empty lines
+And things
+Ending with this line\"\"\"]]
+
+[[contents.fields]]
+id = 18
+kind = \"MultiLine\"
+title = \"Notes\"
+visible = true
+value = [[0, \"\"\"
+line 1
+line 2
+line 3
+
+line 5
+end\"\"\"]]
 """
