--- a/vault_db.toml
+++ b/vault_db.toml
@@ -1116,7 +1116,32 @@ value = [[1702851212, \"\"\"
 My
 secret
 notes
-\"\"\"]]
+\"\"\"], [1709520872, \"\"\"
+My
+secret
+notes
+
+Last line!\"\"\"], [1709522118, \"\"\"
+My
+secret
+notes
+
+
+There
+are
+a
+lot
+more
+lines
+here
+which
+will
+scroll
+
+Last line!\"\"\"], [1709522124, \"\"\"
+My
+secret
+notes\"\"\"]]
 
 [[contents.fields]]
 id = 5
@@ -1133,28 +1158,41 @@ visible = true
 value = [[1702851212, \"Moar\"]]
 
 [[contents.fields]]
-id = 7
+id = 8
+kind = \"MultiLine\"
+title = \"Non-secret Notes\"
+visible = true
+value = [[0, \"\"\"
+line 1
+line 2
+line 3
+
+line 5
+end\"\"\"]]
+
+[[contents.fields]]
+id = 9
 kind = \"Url\"
 title = \"URLs\"
 visible = true
 value = [[1702851212, \"https://shopify.com\"], [1702851212, \"https://twitter.com\"], [1702851212, \"https://linkedin.com\"], [1702851212, \"https://microsoft.com\"], [1702851212, \"https://insta.com\"], [1702851212, \"https://dropbox.com\"], [1702851212, \"https://github.com\"], [1702851212, \"https://netflix.com\"], [1702851212, \"https://apple.com\"], [1702851212, \"https://spotify.com\"], [1702851212, \"https://paypal.com\"], [1702851212, \"https://reddit.com\"]]
 
 [[contents.fields]]
-id = 9
+id = 11
 kind = \"TextLineSecret\"
 title = \"Hidden field1\"
 visible = false
 value = [[1702851212, \"HIDDEN!!!!\"]]
 
 [[contents.fields]]
-id = 10
+id = 12
 kind = \"TextLineSecret\"
 title = \"Hidden field2\"
 visible = false
 value = [[1702851212, \"HIDDEN!!!!\"]]
 
 [[contents.fields]]
-id = 12
+id = 14
 kind = \"TextLineSecret\"
 title = \"Hidden field3\"
 visible = false
@@ -1170,8 +1208,8 @@ value = [[1702851212, \"Last notes\"], [1702851212, \"Really last notes\"]]
 [[contents.fields]]
 id = 17
 kind = \"MultiLineSecret\"
-title = \"Secret Notes\"
-visible = true
+title = \"Hidden Notes\"
+visible = false
 value = [[0, \"\"\"
 There are some secret notes in there
 with multiple lines.
@@ -1180,17 +1218,4 @@ More lines than we have in the other notes
 Also empty lines
 And things
 Ending with this line\"\"\"]]
-
-[[contents.fields]]
-id = 18
-kind = \"MultiLine\"
-title = \"Notes\"
-visible = true
-value = [[0, \"\"\"
-line 1
-line 2
-line 3
-
-line 5
-end\"\"\"]]
 """
