--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,5 +27,7 @@ crypto-common = "0.1.6"
 anyhow = "1.0.75"
 parking_lot = { version = "0.12.1" , features = ["deadlock_detection", "hardware-lock-elision"]}
 zeroize = "1.7.0"
+rand = "0.8.5"
+sha2 = "0.10.8"
 
 [dev-dependencies]
