--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,9 +25,9 @@ url-escape = "0.1.1"
 thiserror = "1.0.56"
 crypto-common = "0.1.6"
 anyhow = "1.0.75"
-parking_lot = { version = "0.12.1" , features = ["deadlock_detection", "hardware-lock-elision"]}
+parking_lot = { version = "0.12.1", features = ["deadlock_detection", "hardware-lock-elision"]}
 zeroize = "1.7.0"
-rand = "0.8.5"
+rand = { version = "0.8.5", features = ["getrandom"] }
 sha2 = "0.10.8"
 
 [dev-dependencies]
