--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "1.0.0"
 edition = "2021"
 authors = ["Dominik Wilkowski <Hi@Dominik-Wilkowski.com>", "Joshua Padman <joshua@padman.id.au>"]
 license = "GPL-3.0-or-later"
-description = "A vault GUI for your air-gaped passwords"
+description = "A vault GUI for your offline passwords"
 homepage = "https://github.com/dominikwilkowski/vault"
 repository = "https://github.com/dominikwilkowski/vault"
 documentation = "https://docs.rs/vault/"
