--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -55,6 +55,8 @@ jobs:
 
 
   clippy:
+    env:
+      RUSTFLAGS: "-Dwarnings"
     name: Running cargo clippy on ${{ matrix.os }}
     strategy:
       matrix:
@@ -100,9 +102,6 @@ jobs:
 
       - name: Cache Rust dependencies
         uses: Swatinem/rust-cache@v2
-
-      - name: Fetch dependencies
-        run: cargo fetch --frozen
 
       - name: Build
         run: cargo build
