--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -101,8 +101,8 @@ jobs:
 
       - name: Cache Rust dependencies
         uses: Swatinem/rust-cache@v2
-        prefix-key: clippy-v0
-        key: clippy-${{ matrix.os }}
+        prefix-key: "clippy-v0"
+        key: "clippy-${{ matrix.os }}"
 
       - name: Fetch dependencies
         run: cargo fetch --locked
@@ -133,8 +133,8 @@ jobs:
 
       - name: Cache Rust dependencies
         uses: Swatinem/rust-cache@v2
-        prefix-key: test-v0
-        key: test-${{ matrix.os }}
+        prefix-key: "test-v0"
+        key: "test-${{ matrix.os }}"
 
       - name: Build
         run: cargo build
