--- a/vault_db.toml
+++ b/vault_db.toml
@@ -1231,4 +1231,9 @@ More lines than we have in the other notes
 Also empty lines
 And things
 Ending with this line\"\"\"]]
+
+[[contents]]
+id = 42
+title = \"jhfgds fsd fsd f\"
+fields = []
 """
