--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Update toolchain & add rustfmt
         run: |
-          rustup update
+          rustup update --no-self-update
           rustup component add rustfmt
 
       - name: Run rustfmt
@@ -71,7 +71,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Update toolchain
-        run: rustup update
+        run: rustup update --no-self-update
 
       - name: Run check
         run: cargo check
@@ -96,7 +96,7 @@ jobs:
 
       - name: Update toolchain & add clippy
         run: |
-          rustup update
+          rustup update --no-self-update
           rustup component add clippy
 
       - name: Cache Rust dependencies
@@ -130,7 +130,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Update toolchain
-        run: rustup update
+        run: rustup update --no-self-update
 
       - name: Cache Rust dependencies
         uses: Swatinem/rust-cache@v2
