--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,11 +1,11 @@
 name: Linting & Testing
-on: [workflow_call]
 
 defaults:
   run:
     shell: bash
 
 on:
+  workflow_call:
   push:
     branches:
       - 'main'
