--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -12,6 +12,7 @@ on:
 jobs:
   deploy:
     name: Publish to Github Pages
+    if: github.ref == "refs/heads/main"
     runs-on: ubuntu-latest
     permissions:
       contents: write
