--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,8 +43,13 @@ features = ["std", "zeroize"]
 
 [dependencies.floem]
 features = ["editor", "rfd-async-std"]
-git = "https://github.com/thewizzy/floem.git"
-rev = "3c9caf1887ca52962e0e949a4815bb6e02efa5eb"
+git = "https://github.com/lapce/floem.git"
+rev = "408b8253a5ed9bbcd27ebf8c3c418cc82098fef7"
+
+[dependencies.floem-winit]
+features = ["rwh_05"]
+git = "https://github.com/lapce/winit.git"
+rev = "08a3dfc1ca8cac27c4a404e2eed92dfb77167821"
 
 [dependencies.parking_lot]
 version = "0.12"
